# PostController.cs
@@ -6,8 +6,8 @@ namespace sievefilteringinternational;
 
 public class PostController(IPostService postService, ISieveProcessor processor) : ControllerBase
 {
-    [HttpGet(nameof(GetPosts))]
-    public async Task<IQueryable<Post>> GetPosts(SieveModel sieveModel)
+    [HttpPost(nameof(GetPosts))]
+    public async Task<IQueryable<Post>> GetPosts([FromBody]SieveModel sieveModel)
     {
         IQueryable<Post> result = await postService.GetPosts();
 
